Remove introductory documentation and refine platform-agnostic messaging for Fluxtion. Update tutorial with corrected Java specs and output example.